[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "porkbun-api"
version = "2.0.1"
authors = [
  { name="mazer", email="contact@m3r.one" },
]

description = "A Python wrapper for Porkbun API with extra features and shortcuts"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

#dependencies = [
# "certifi==2026.4.22",
# "charset-normalizer==3.4.7",
# "idna==3.13",
# "requests==2.33.1",
# "urllib3==2.7.0",
#]

#[tool.pytest.ini_options]
#minversion = "8.0"
#addopts = "-ra -q"
#testpaths = [
#    "tests",
#    "integration",
#]

[project.urls]
"Homepage" = "https://github.com/m3rone/porkbun-api"
"Bug Tracker" = "https://github.com/m3rone/porkbun-api/issues"
